@@ -1,3 +1,6 @@
+- XFdrake:
+  o added "Disable Ctrl-Alt-Backspace" option
+
 Version 0.77 - 22 July 2009
 
 - XFdrake:
